# redr-rs

./: .gitignore  Cargo.toml  README.md  make.bat  rustfmt.toml
arcom/: Cargo.toml
arcom/database/: Cargo.toml
arcom/database/src/: lib.rs  quarantines.rs
arcom/shared-arcom/: Cargo.toml
arcom/shared-arcom/src/: lib.rs
arcom/src/: lib.rs
arcom/unpackers/ole-extractor/: Cargo.toml
arcom/unpackers/ole-extractor/src/: lib.rs
arcom/unpackers/zip-extractor/: Cargo.toml
arcom/unpackers/zip-extractor/src/: lib.rs
book/: 1.-structure.md  1.1-agent-rts.md  README.md  SUMMARY.md  contents.md
cli/: Cargo.toml
cli/src/: cli.rs  detection.rs  main.rs  scan_path.rs
common/: Cargo.toml
common/src/: cleaning_info.rs  deserializer.rs  event.rs  hasher.rs  lib.rs  utils.rs
common/src/event/: file_create.rs  image_load.rs  process_create.rs  registry_set_value.rs
database/: Cargo.toml
database/src/: lib.rs  quarantines.rs  update.rs
detection/: Cargo.toml
detection/src/: error_msg.rs  lib.rs  print_error.rs  winapi.rs
ramon/: Cargo.toml  DriverCertificate.cer  rustfmt.toml
ramon-km/: Cargo.toml  Makefile.toml  README.md
ramon-km/src/: lib.rs  minifilter.rs
ramon-km/src/minifilter/: file_monitor.rs
ramon-km/src/notifiers/: process_notify.rs  registry_notify.rs
ramon-um/: Cargo.toml  Makefile.toml  ReadMe.md  make.bat  malset.sset  rustfmt.toml
ramon-um/arcom/: Cargo.toml
ramon-um/arcom/shared-arcom/src/: lib.rs
ramon-um/arcom/unpackers/ole-extractor/src/: lib.rs
ramon-um/arcom/unpackers/zip-extractor/: Cargo.toml
ramon-um/arcom/unpackers/zip-extractor/src/: lib.rs
ramon-um/cli/: Cargo.toml
ramon-um/cli/src/: main.rs  scan_path.rs
ramon-um/common-um/: Cargo.toml
ramon-um/common-um/src/: detection_report.rs  lib.rs  sha256_utils.rs
ramon-um/common-um/src/redr/: file_abstraction.rs  file_info.rs  file_scan_info.rs
ramon-um/detection/: Cargo.toml
ramon-um/detection/src/: error.rs  lib.rs
ramon-um/modules/arcom/shared-arcom/: Cargo.toml
ramon-um/modules/arcom/shared-arcom/src/: lib.rs
ramon-um/modules/arcom/src/: lib.rs
ramon-um/modules/arcom/unpackers/ole-extractor/: Cargo.toml
ramon-um/modules/arcom/unpackers/ole-extractor/src/: lib.rs
ramon-um/modules/arcom/unpackers/zip-extractor/src/: lib.rs
ramon-um/modules/cleaner/: Cargo.toml
ramon-um/modules/cleaner/src/: cleaner.rs
ramon-um/modules/cleaner/src/cleaner/: file_cleaner.rs  process_cleaner.rs
ramon-um/modules/cli/: Cargo.toml
ramon-um/modules/cli/src/: detection.rs  main.rs  scan_path.rs
ramon-um/modules/common-um/: Cargo.toml
ramon-um/modules/common-um/src/: detection.rs  lib.rs  redr.rs  sha256_utils.rs
ramon-um/modules/common-um/src/redr/: file_abstraction.rs  file_info.rs  file_scan_info.rs
ramon-um/modules/detection/: Cargo.toml
ramon-um/modules/detection/src/: error_msg.rs  handle_wrapper.rs  lib.rs
ramon-um/modules/sandbox/: Cargo.toml  build.rs
ramon-um/modules/sandbox/src/: error.rs  lib.rs  sandbox.rs
ramon-um/modules/scanner/: Cargo.toml
ramon-um/modules/scanner/src/: error.rs  lib.rs  scan.rs  scan_one_file.rs  scan_result.rs  scanner.rs  simple_scanner.rs
ramon-um/modules/scanner/src/scanner/: ramon_event.rs  scan_report.rs
ramon-um/modules/signatures/: Cargo.toml
ramon-um/modules/signatures/src/: error.rs  lib.rs  sig_store.rs
ramon-um/modules/signatures/src/sig_store/: sig_set.rs
ramon-um/modules/signatures/src/sig_store/sig_set/: heuristic_set.rs  sha_set.rs  signature.rs
ramon-um/response/: Cargo.toml
ramon-um/response/src/: lib.rs
ramon-um/response/src/isolation/: api64.rs  condition.rs  engine.rs  mod.rs
ramon-um/scanner/: Cargo.toml
ramon-um/scanner/src/: scan_one_file.rs  scan_result.rs  scanner.rs  simple_scanner.rs
ramon-um/signatures/: Cargo.toml
ramon-um/signatures/bedet/: unknown.sig  watacat_behavioural.sig
ramon-um/signatures/src/: error.rs
ramon-um/signatures/src/sig_store/: sig_set.rs
ramon-um/signatures/src/sig_store/sig_set/: heuristic_set.rs  sha_set.rs  signature.rs  sigset_deserializer.rs  sigset_serializer.rs
ramon-um/signatures/src/sig_store/sig_set/signature/: yaml_signature.rs
ramon-um/sigs/dyn/: mocked_sig.sig
ramon-um/sigs/heur/: unknown2.sig
ramon-um/sigs/sha/: Watacat_sha.sig
ramon/src/: lib.rs  minifilter.rs  send_message.rs
ramon/src/minifilter/: file_monitor.rs
ramon/src/notifiers/: image_load_notify.rs
response/: Cargo.toml  build.rs
response/src/: lib.rs  priviledge.rs  process_kill.rs  terminate_process.rs
response/src/delete_file/: acl.rs  error.rs  mod.rs  restart_manager.rs  unload_dll.rs  unlock_file.rs
response/src/isolation/: api32.rs  condition.rs  engine.rs  mod.rs
response/src/quarantine/: header.rs  mod.rs  quarantine.rs  unquarantine.rs
scanner/: Cargo.toml
scanner/src/: lib.rs  scan_one_file.rs  scan_result.rs  scanner.rs  simple_scanner.rs
scanner/src/scanner/: ramon_event.rs  scan_report.rs
shared/: Cargo.toml
shared/src/: cleaning_info.rs  constants.rs  deserializer.rs  enums.rs  event.rs  hasher.rs  lib.rs  quarantine.rs  serializer.rs  sha_buf.rs
shared/src/event/: file_create.rs  image_load.rs  process_create.rs  registry_set_value.rs
signatures/: Cargo.toml
signatures/src/: error.rs  sig_store.rs
signatures/src/sig_store/: sig_set.rs
signatures/src/sig_store/sig_set/: heuristic_set.rs  sha_set.rs  signature.rs  sigset_deserializer.rs  sigset_serializer.rs
signatures/src/sig_store/sig_set/signature/: yaml_signature.rs
utils/: Cargo.toml
utils/src/: encryption.rs  lib.rs  sha256_utils.rs
utils/src/redr/: file_abstraction.rs  file_info.rs  file_scan_info.rs  malware_info.rs
utils/src/windows/: mod.rs  output_debug_string.rs  smart_buffer.rs  smart_handle.rs  win_error.rs
