[workspace.dependencies]
chrono = { version = "0.4.44", default-features = false }
hex =  "0.4"
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
rkyv = "0.8"
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0" }
sha2 = "0.10"
smart-default = "0.3"
tokio = "1.0"
uuid = "1.4"
widestring = "0.4"
windows-sys = { version = "0.61" }

[workspace]
resolver = "2"
members = ["cli", "response", "detection", "scanner", "arcom", "utils", "shared", "database"]
default-members = ["cli", "scanner", "arcom", "detection"]

[profile.release]
debug = true