[package]
name = "ramon-client"
version = "0.1.0"
edition = "2024"
description = "Command line interface of REDR"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
detection = { path = "../detection" }
scanner = { path = "../scanner" }
signatures = { path = "../signatures" }
utils = { path = "../utils" }
response = { path = "../response" }

ansi_term = "~0"
clap = { version = "~4", features = ["derive"] }
console = "~0"
env_logger = "~0"
log = "~0"
tokio = { version = "~1", features = ["full"] }
