[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "~0", default-features = false, features = ["alloc"] }
log = "~0"
sha2 = { version = "~0", default-features = false }
serde = { version = "~1", default-features = false, features = ["derive", "alloc"] }
thiserror-no-std = "~2"