[package]
name = "detection"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
shared = { path = "../shared" }
response = { path = "../response" }
scanner = { path = "../scanner" }
signatures = { path = "../signatures" }

ansi_term = "~0"
console = "~0"
downcast-rs = "1.2.1"
log = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
widestring = "~1"
tokio = { version = "1.36.0", features = ["full"] }
winsafe = "~0"

windows-sys = { workspace = true, features = [ "Win32_Storage",
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Storage_InstallableFileSystems",
    "Win32_System",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading"]}