[package]
name = "response"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared"}

bincode = "1.3"
lazy_static = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = {workspace = true, features = ["derive"] }
sha2 = { workspace = true }
uuid =  { workspace = true, features = ["v4", "serde"] }
widestring = { workspace = true }

windows-sys = { workspace = true, features = [ "Win32_Storage",
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Storage_InstallableFileSystems",
    "Win32_System",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading"]}