[package]
name = "scanner"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcom = { path = "../arcom" }
response = { path = "../response" }
utils = { path = "../utils" }
signatures = { path = "../signatures" }

ansi_term = "~0"
log = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }