[package]
name = "shared"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "~0", default-features = false, features = ["alloc"] }
log = "~0"
rand = { workspace = true }
rkyv = { workspace = true }
sha2 = { version = "~0", default-features = false }
serde = { workspace = true, features = ["derive", "alloc"] }
thiserror-no-std = "~2"