[package]
name = "signatures"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
utils = { path = "../utils" }

bincode = { version = "2.0.0-rc.3", features = ["serde", "alloc"]}
downcast-rs = "1.2.1"
hex = { workspace = true }
log = { workspace = true }
object = "0.33.0"
serde = { version = "~1", features = ["derive"] }
serde_yaml = "~0"
sha2 = { workspace = true }
thiserror = { workspace = true }