[package]
name = "utils"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

aes-gcm = "0.10.3"
argon2 = "0.3"
hex = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_System_Diagnostics_Debug"] }
zip = "0.4"